Update EnvironmentManager.java